# starlette-discord

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test-fastapi.py  test-starlette.py  test.py  test_join_guild.py
docs/: api.rst  changelog.md  client.rst  conf.py  getting_started.md  index.rst  models.rst  oauth.rst
examples/: basic_fastapi.py  basic_starlette.py  fastapi_sessions_with_token.py  multiple_requests_fastapi.py  session_handling_fastapi.py  state_fastapi.py
starlette_discord/: __init__.py  client.py  client_.py  http.py  middleware.py  models.py  oauth.py  oauth2session.py  user.py
tests/: test-starlette.py  test_dpy_fastapi.py  test_fastapi.py  test_middleware_starlette.py  test_starlette.py  test_state_fastapi.py  test_token_session.py
