[tool.poetry]
name = "starlette-discord"
version = "0.2.1"
description = "\"Login with Discord\" support for Starlette and FastAPI."
authors = ["nwunderly <>", "BeeMoe5 <>"]
license = "MIT"
readme = "README.md"
packages = [{include = "starlette_discord"}]

[tool.poetry.dependencies]
python = "^3.8"
oauthlib = "^3.2.2"
starlette = ">=0.13.6"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
